gcc/testsuite/g++.dg/parse/template2.C
namespace N {
  template < typename T > class C : T {};
}

int main() {
  N::C(); // { dg-error "template" }
}
